[level 0] Title: 옹알이 (1), Time: 0.90 ms, Memory: 73.4 MB -BaekjoonHub